Added Markdown for Moera spoiler tag (#5)
* Added Markdown for Moera spoiler tag
* Removed unneeded parts of mentions Markdown extension
* Small fix to mentions parsing

Authored-by: Eliyahu Duvidzon <eliduvid1@gmail.com>